<resources>
    <string name="app_name" translatable="false">usersUpgrade</string>
    <string name="text_login_input">Enter login</string>
    <string name="text_password_input">Enter password</string>
    <string name="text_login_button">Login</string>
    <string name="text_error_invalid_input">Invalid login or password</string>
    <string name="text_greeting">Hello, </string>
    <string name="text_unlogin">Logout</string>
    <string name="text_registration_title">Registration</string>
    <string name="text_registration_hint_name_input">Input name</string>
    <string name="text_registration_hint_login_input">Input login</string>
    <string name="text_registration_hint_password_input">Input password</string>
    <string name="text_registration_button_register">Register</string>
    <string name="text_registration_user_added_successfully">You successfully registered!</string>
    <string name="text_offer_to_register">Have not account? Register</string>
    <string name="text_registration_hint_repeat_password">Repeat password</string>
    <string name="text_registration_passwords_do_not_match_error">Password do not match</string>
    <string name="text_registration_password_is_short">Necessary password length is not smallest 8 characters</string>
    <string name="text_registration_input_length_error">Max length is 25 characters</string>
    <string name="text_registration_empty_field_error">This field is can not be empty</string>
</resources>