<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ed_login_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:inputType="text"
        android:hint="@string/text_login_input"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/ed_password_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/text_password_input"
        app:layout_constraintTop_toBottomOf="@id/ed_login_input"
        app:layout_constraintStart_toStartOf="@id/ed_login_input"
        app:layout_constraintEnd_toEndOf="@id/ed_login_input" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="gone"
        android:text="@string/text_error_invalid_input"
        app:layout_constraintTop_toBottomOf="@id/ed_password_input"
        app:layout_constraintStart_toStartOf="@id/ed_password_input"
        app:layout_constraintEnd_toEndOf="@id/ed_password_input" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/text_login_button"
        app:layout_constraintTop_toBottomOf="@id/ed_password_input"
        app:layout_constraintStart_toStartOf="@id/ed_password_input"
        app:layout_constraintEnd_toEndOf="@id/ed_password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>