<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/et_login_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:hint="@string/text_login_input"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password_input"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/text_password_input"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/et_login_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/et_login_input"
        app:layout_constraintTop_toBottomOf="@id/et_login_input" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/et_password_input"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@id/et_password_input"
        app:layout_constraintTop_toBottomOf="@id/et_password_input" />

    <Button
        android:id="@+id/btn_login"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/text_login_button"
        app:layout_constraintEnd_toEndOf="@id/et_password_input"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@id/et_password_input"
        app:layout_constraintTop_toBottomOf="@id/et_password_input" />

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/btn_offer_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_offer_to_register"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/et_password_input"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/et_password_input"
        app:layout_constraintTop_toBottomOf="@+id/et_password_input" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/text_main_greetieng"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>